--- a/TutorDot_iOS_1/TutorDot_iOS/Storyboards/MyPage.storyboard
+++ b/TutorDot_iOS_1/TutorDot_iOS/Storyboards/MyPage.storyboard
@@ -113,7 +113,7 @@
                                                         <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                     </collectionViewFlowLayout>
                                                     <cells>
-                                                        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="ALp-hh-tbt">
+                                                        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="myClassCell" id="ALp-hh-tbt" customClass="MyClassCell" customModule="TutorDot_iOS" customModuleProvider="target">
                                                             <rect key="frame" x="35.666666666666664" y="0.0" width="208" height="107"/>
                                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                             <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="NB7-Ug-fbS">
@@ -176,6 +176,12 @@
                                                                 </constraints>
                                                             </collectionViewCellContentView>
                                                             <color key="backgroundColor" red="0.96078431372549022" green="0.96470588235294119" blue="0.98039215686274506" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <connections>
+                                                                <outlet property="TuteeImage" destination="eg3-jv-7Hi" id="WeS-6A-yF7"/>
+                                                                <outlet property="TuteeImage2" destination="ZmF-1p-ytP" id="eP9-Ge-fPw"/>
+                                                                <outlet property="classColor" destination="gpd-ov-Pnv" id="3Or-d0-UgO"/>
+                                                                <outlet property="classTitle" destination="pK6-Ih-V0N" id="mzl-Sm-ty7"/>
+                                                            </connections>
                                                         </collectionViewCell>
                                                     </cells>
                                                 </collectionView>
