--- a/TutorDot_iOS_1/TutorDot_iOS/Resource/Storyboards/Login.storyboard
+++ b/TutorDot_iOS_1/TutorDot_iOS/Resource/Storyboards/Login.storyboard
@@ -66,7 +66,7 @@
                                     <constraint firstAttribute="height" constant="38" id="ONA-xv-ji7"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" secureTextEntry="YES"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="비밀번호 확인" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zYI-hp-Y2P">
                                 <rect key="frame" x="41" y="563" width="293" height="38"/>
@@ -74,7 +74,7 @@
                                     <constraint firstAttribute="height" constant="38" id="3py-ws-n1R"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" secureTextEntry="YES"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="이용약관 및 개인정보보호정책에 동의합니다." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aJT-H9-aFY">
                                 <rect key="frame" x="92.999999999999986" y="643" width="245.66666666666663" height="21"/>
@@ -151,6 +151,34 @@
                 </viewController>
             </objects>
             <point key="canvasLocation" x="151.19999999999999" y="87.931034482758619"/>
+        </scene>
+        <!--LoginVC-->
+        <scene sceneID="ul9-1I-FHk">
+            <objects>
+                <viewController id="q2Q-aw-xjB" customClass="LoginVC" customModule="TutorDot_iOS" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="CUN-hf-Yyp">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="loginImgTutor" translatesAutoresizingMaskIntoConstraints="NO" id="eSQ-cf-8xx">
+                                <rect key="frame" x="134.66666666666666" y="143" width="106" height="27"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="106" id="Z73-xc-gW0"/>
+                                    <constraint firstAttribute="height" constant="27" id="u9M-TQ-LC1"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="eSQ-cf-8xx" firstAttribute="top" secondItem="16T-jz-0qE" secondAttribute="top" constant="99" id="TEz-Bs-sS4"/>
+                            <constraint firstItem="eSQ-cf-8xx" firstAttribute="centerX" secondItem="16T-jz-0qE" secondAttribute="centerX" id="vfF-gq-8kJ"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="16T-jz-0qE"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="89X-v3-OjS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1027" y="95"/>
         </scene>
     </scenes>
     <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
